// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Icon Component correctly 1`] = `
<div
  className="sc-hMqMXs heOdXS"
>
  <input
    className="sc-kEYyzF gXYeYh"
    id="undefined-"
    name=""
    onBlur={undefined}
    onChange={undefined}
    onDragStart={undefined}
    onDrop={undefined}
    onFocus={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`renders the Icon Component correctly 2`] = `
<div
  className="sc-hMqMXs heOdXS"
>
  <input
    className="sc-kEYyzF gXYeYh"
    id="undefined-"
    name=""
    onBlur={undefined}
    onChange={undefined}
    onDragStart={undefined}
    onDrop={undefined}
    onFocus={undefined}
    type="text"
    value=""
  />
  <span
    className="sc-gPEVay aEyfd"
    color="error"
    scale="s"
  >
    <i
      className="material-icons  sc-kkGfuU WViRF"
      color="error"
      onClick={undefined}
      scale="s"
    >
      clear
    </i>
     
    This Field has an error
  </span>
</div>
`;

exports[`renders the Icon Component correctly 3`] = `
<div
  className="sc-hMqMXs heOdXS"
>
  <input
    className="sc-kEYyzF gXYeYh"
    id="undefined-"
    name=""
    onBlur={undefined}
    onChange={undefined}
    onDragStart={undefined}
    onDrop={undefined}
    onFocus={undefined}
    type="text"
    value=""
  />
  <span
    className="sc-gPEVay hpHbrP"
    color="warning"
    scale="s"
  >
    <i
      className="material-icons  sc-kkGfuU bdsBHj"
      color="warning"
      onClick={undefined}
      scale="s"
    >
      warning
    </i>
     
    This Field has an warning
  </span>
</div>
`;

exports[`renders the Icon Component correctly 4`] = `
<div
  className="sc-hMqMXs heOdXS"
>
  <label
    className="sc-jDwBTQ eiUfKR"
    htmlFor="undefined-"
  >
    A InputField
     
    <span
      className="sc-gPEVay hQXnKc"
      color="error"
    >
      *
    </span>
  </label>
  <input
    className="sc-kEYyzF gXYeYh"
    id="undefined-"
    name=""
    onBlur={undefined}
    onChange={undefined}
    onDragStart={undefined}
    onDrop={undefined}
    onFocus={undefined}
    type="text"
    value=""
  />
</div>
`;
